<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_space"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_view"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/rg_sunshine_letter_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_sunshine_submit_consultation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation" />

                <RadioButton
                    android:id="@+id/rb_sunshine_submit_advice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advice" />

                <RadioButton
                    android:id="@+id/rb_sunshine_submit_complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint" />

                <RadioButton
                    android:id="@+id/rb_sunshine_submit_praise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/praise" />
                <RadioButton
                    android:id="@+id/rb_sunshine_submit_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commit_object" />

                <Spinner
                    android:id="@+id/s_sunshine_submit_object"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_sunshine_submit_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme" />

                <EditText
                    android:id="@+id/et_sunshine_submit_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_sunshine_submit_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content" />

                <EditText
                    android:id="@+id/et_sunshine_submit_content"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_sunshine_submit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/et_sunshine_submit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_sunshine_submit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_sunshine_submit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_sunshine_submit_mobile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_phone" />

                <EditText
                    android:id="@+id/et_sunshine_submit_mobile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/b_sunshine_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>

        <include
            layout="@layout/include_load_view"/>
    </LinearLayout>

</ScrollView>