<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="match_parent">


    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:flipInterval="30"
        android:persistentDrawingCache="animation"/>


    <View
        style="@style/menu_line"
        />

    <!-- 底部菜单-->
    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_home"
            android:checked="true"
            android:text="@string/home"/>
        <RadioButton
            android:id="@+id/rb_education"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_education"
            android:checked="false"
            android:text="@string/education"/>
        <RadioButton
            android:id="@+id/rb_library"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_library"
            android:checked="false"
            android:text="@string/library"/>
        <RadioButton
            android:id="@+id/rb_sunshine"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_sunshine"
            android:checked="false"
            android:text="@string/sunshine"/>
        <RadioButton
            android:id="@+id/rb_person"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_person"
            android:checked="false"
            android:text="@string/person"/>
    </RadioGroup>


</LinearLayout>