<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
    >
    <!--<include-->
    <!--android:id="@+id/t_menu"-->
    <!--layout="@layout/include_toolbar"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#546656">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/home_checked"
            android:gravity="center_horizontal"
            android:padding="-10dp"
            android:button="@null"
            android:text="gfgfg"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line"
        style="@style/menu_line"
        android:layout_above="@id/rg_menu"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <!-- 底部菜单-->
    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/gray_light"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_home"
            android:checked="true"
            android:text="@string/home"/>
        <RadioButton
            android:id="@+id/rb_education"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_education"
            android:text="@string/education"
            android:layout_height="105dp"/>
        <RadioButton
            android:id="@+id/rb_library"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_library"
            android:text="@string/library"/>
        <RadioButton
            android:id="@+id/rb_sunshine"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_sunshine"
            android:text="@string/sunshine"/>
        <RadioButton
            android:id="@+id/rb_person"
            style="@style/tab_radio"
            android:drawableTop="@drawable/menu_person"
            android:text="@string/person"/>
    </RadioGroup>

</RelativeLayout>
