<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/round_button"
                android:text="@string/about"/>

            <Button
                android:id="@+id/b_check_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/round_button"
                android:text="@string/check_update"/>

            <Button
                android:id="@+id/b_contact_me"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/round_button"
                android:text="@string/contact_me"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>