<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/blue_light"
        android:layout_height="@dimen/title_bar">

        <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:src="@mipmap/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/tv_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:text="@string/evaluate_detail"/>

        <Button
            android:id="@+id/b_submit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:text="@string/submit"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/include_load_progress"
            />

        <include
            layout="@layout/include_retry"
            />
        <LinearLayout
            android:id="@+id/ll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/evaluate_advice"/>
            <EditText
                android:id="@+id/et_advice"
                android:background="@drawable/round_edittext_normal"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="30dp" />

            <ListView
                android:id="@+id/lv_radio_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                ></ListView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>